поправил ошибки, добавил лимиты, рекомендации
