# internal/api/repositories/completed_events_repository.go
@@ -26,38 +26,33 @@ func (r *CompletedEventsRepository) WithDB(db DBTX) *CompletedEventsRepository {
 }
 
 // AddCompletedEvent — добавляет событие + обновляет очки.
-// Работает в транзакции, если db — pgx.Tx.
 func (r *CompletedEventsRepository) AddCompletedEvent(ctx context.Context, userId, eventId int64) error {
-	// 1. Получаем очки события
+
+	//Получаем очки события
 	var points int
-	err := r.db.QueryRow(ctx,
-		`SELECT points FROM events WHERE id = $1`,
-		eventId,
-	).Scan(&points)
+	err := r.db.QueryRow(ctx, `SELECT points FROM events WHERE id = $1`, eventId).Scan(&points)
+
 	if err != nil {
-		return fmt.Errorf("failed to get event points: %w", err)
+		if errors.Is(err, pgx.ErrNoRows) {
+			return fmt.Errorf("event points not found for eventId %d: %w", eventId, err)
+		}
+		return err
 	}
 
 	// 2. Добавляем выполненное событие
-	_, err = r.db.Exec(ctx,
-		`INSERT INTO completed_events (user_id, event_id)
-         VALUES ($1, $2)`,
-		userId, eventId,
+	tag, err := r.db.Exec(ctx,
+		`INSERT INTO completed_events (user_id, event_id) VALUES ($1, $2)`, userId, eventId,
 	)
-	if err != nil {
-		return fmt.Errorf("failed to insert completed event: %w", err)
+	if err != nil || tag.RowsAffected() == 0 {
+		return fmt.Errorf("could not insert completed event: %w", err)
 	}
-
 	// 3. Обновляем очки пользователя
-	_, err = r.db.Exec(ctx,
-		`INSERT INTO user_points (user_id, total_points)
-         VALUES ($1, $2)
-         ON CONFLICT (user_id)
-         DO UPDATE SET total_points = user_points.total_points + EXCLUDED.total_points`,
-		userId, points,
+	tag, err = r.db.Exec(ctx,
+		`INSERT INTO user_points (user_id, total_points) VALUES ($1, $2) ON CONFLICT (user_id)
+         DO UPDATE SET total_points = user_points.total_points + EXCLUDED.total_points`, userId, points,
 	)
-	if err != nil {
-		return fmt.Errorf("failed to update user_points: %w", err)
+	if err != nil || tag.RowsAffected() == 0 {
+		return fmt.Errorf("could not insert update user points: %w", err)
 	}
 
 	return nil
@@ -65,20 +60,26 @@ func (r *CompletedEventsRepository) AddCompletedEvent(ctx context.Context, userI
 
 // DeleteCompletedEvent удаляет связь user_id + event_id
 func (r *CompletedEventsRepository) DeleteCompletedEvent(ctx context.Context, userId, eventId int64) (pgconn.CommandTag, error) {
-	return r.db.Exec(ctx,
+	tag, err := r.db.Exec(ctx,
 		`DELETE FROM completed_events 
          WHERE user_id = $1 AND event_id = $2`,
 		userId, eventId,
 	)
+	if err != nil || tag.RowsAffected() == 0 {
+		return pgconn.CommandTag{}, fmt.Errorf("could not delete completed event: %w", err)
+	}
+	return tag, nil
 }
 
 // GetAllCompletedEvents Получить все события
-func (r *CompletedEventsRepository) GetAllCompletedEvents(ctx context.Context) ([]models.CompletedEvent, error) {
+func (r *CompletedEventsRepository) GetAllCompletedEvents(ctx context.Context, limit int) ([]models.CompletedEvent, error) {
 	var result []models.CompletedEvent
 
 	err := pgxscan.Select(ctx, r.db, &result,
-		`SELECT user_id, event_id, completed_at FROM completed_events`,
-	)
+		`SELECT user_id, event_id, completed_at FROM completed_events limit $1`, limit)
+	if err != nil {
+		return nil, fmt.Errorf("could not get completed events: %w", err)
+	}
 
 	return result, err
 }
@@ -89,16 +90,20 @@ func (r *CompletedEventsRepository) GetCompletedEventsWithStats(ctx context.Cont
 
 	// 1. Получаем выполненные события
 	err := pgxscan.Select(ctx, r.db, &resp.Events,
-		`SELECT event_id, completed_at 
-         FROM completed_events 
-         WHERE user_id = $1`,
+		`SELECT e.id AS id, e.title, e.description, e.event_type_code, e.points, e.icon_url, e.event_date, e.created_at,
+	ce.completed_at
+     FROM events e
+     JOIN completed_events ce ON e.id = ce.event_id
+     WHERE ce.user_id = $1
+       AND ce.completed_at IS NOT NULL;`,
 		userId,
 	)
 
-	if errors.Is(err, pgx.ErrNoRows) {
-		resp.Events = []models.UserCompletedEvent{}
-	} else if err != nil {
-		return resp, err
+	if err != nil {
+		if errors.Is(err, pgx.ErrNoRows) {
+			return resp, fmt.Errorf("completed events not found: %w", err)
+		}
+		return resp, fmt.Errorf("could not get completed events: %w", err)
 	}
 
 	// 2. Получаем статистику по типам
@@ -115,8 +120,11 @@ func (r *CompletedEventsRepository) GetCompletedEventsWithStats(ctx context.Cont
          GROUP BY e.event_type_code`,
 		userId,
 	)
-	if err != nil && !errors.Is(err, pgx.ErrNoRows) {
-		return resp, err
+	if err != nil {
+		if errors.Is(err, pgx.ErrNoRows) {
+			return resp, fmt.Errorf("completed events not found: %w", err)
+		}
+		return resp, fmt.Errorf("could not get completed events: %w", err)
 	}
 
 	// распределяем статистику
